# sovereign-reddit-rollup

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  constants.toml  rust-toolchain.toml
.github/workflows/: rust.yml  soak-test.yml
configs/celestia/: genesis.json  rollup.toml
configs/mock/: genesis.json  genesis_with_paymaster.json  rollup-dockerized.toml  rollup.toml
crates/: autogenerated.rs
crates/example-module/: Cargo.toml
crates/example-module/src/: lib.rs
crates/example-module/tests/: example_module.rs
crates/provers/risc0/: Cargo.toml  build.rs
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/: Cargo.toml  build.rs
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/reddit/: Cargo.toml
crates/reddit/src/: call.rs  event.rs  lib.rs  post.rs  query.rs  subreddit.rs  user.rs  utils.rs
crates/rollup/: Cargo.toml  Makefile  build.rs
crates/rollup/src/: rollup.rs  zkvm.rs
crates/rollup/tests/: test_helpers.rs
crates/rollup/tests/bank/: mod.rs
crates/stf/: Cargo.toml
crates/stf/src/: lib.rs  runtime.rs
docker/influxdb-data/: influxd.bolt
docker/rollup/: Dockerfile.mock
js/: README.md  package-lock.json  package.json
js/src/: index.ts  signer.ts
scripts/: run-soak-test.sh  sov-rollup-starter.sh
scripts/soak-test/: Cargo.toml
scripts/soak-test/src/: main.rs
test-data/requests/: create_token.json  mint.json  transfer.json
