[workspace]

resolver = "2"

members = ["crates/rollup", "crates/stf", "crates/example-module", "scripts/soak-test", "crates/reddit"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.81"

[workspace.dependencies]
sov-accounts = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-api-spec = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-attester-incentives = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-chain-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-bank = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-blob-storage = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-paymaster = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-capabilities = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-celestia-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-cli = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-db = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-kernels = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-ledger-apis = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-mock-da = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-modules-rollup-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-uniqueness = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-prover-incentives = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-risc0-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-sp1-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-sequencer = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-sequencer-registry = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-soak-testing = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-stf-runner = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-test-utils = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-rollup-apis = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-universal-wallet = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
stf-starter = { path = "./crates/stf" }
example-module = { path = "./crates/example-module" }
strum = { version = "0.26.3", features = ["derive"] }

axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "0.10.6", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.5"
jsonrpsee = { version = "0.24.2", features = ["jsonrpsee-types"] }

risc0-build = "1.2.1"
