[package]
name = "reddit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
sov-bank = { workspace = true }
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
schemars = { workspace = true }
jsonrpsee = { workspace = true, features = [
	"macros",
	"client-core",
	"server",
], optional = true }
rand = "0.8.5"
[dev-dependencies]
tempfile = { workspace = true }
reddit = { path = ".", version = "*", features = ["native"] }
sov-test-utils = { workspace = true }
strum = { workspace = true }

[features]
default = []
arbitrary = [
    "reddit/arbitrary",
    "sov-modules-api/arbitrary",
    "sov-state/arbitrary",
    "sov-test-utils/arbitrary",
]
native = [
    "reddit/native",
    "sov-bank/native",
    "sov-modules-api/native",
    "sov-state/native",
    "jsonrpsee"
]
