[package]
name = "sov-demo-prover-guest-celestia-risc0"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = { version = "1.0.95" }

risc0-zkvm = { version = "1.2.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "1.2.1" }

stf-starter = { path = "../../../stf" }

sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-celestia-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-risc0-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-kernels = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f" }
sov-metrics = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "3ff42425499772af024679fd3244b3e2a95b626f", optional = true }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# Corresponding release: <https://github.com/risc0/curve25519-dalek/releases/tag/curve25519-4.1.2-risczero.0>
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", rev = "3dccc5b71b806f500e73829e2a5cbfe288cce2a0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
    "sov-celestia-adapter/bench",
    "sov-risc0-adapter/bench",
    "sov-modules-api/bench",
    "sov-state/bench",
    "sov-modules-stf-blueprint/bench",
    "sov-metrics/risc0",
]
bincode = ["sov-risc0-adapter/bincode"]
