[workspace]

[package]
name = "guest-mock-starter-risc0"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { version = "1.0.95" }

risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "1.2" }

serde = { version = "1.0.188", features = ["derive", "rc"] }


sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-mock-da = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-risc0-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-kernels = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734" }
sov-metrics = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "2d36351841398632b6e242929f7c69ef9119d734", optional = true }



stf-starter = { path = "../../../stf" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# Corresponding release: <https://github.com/risc0/curve25519-dalek/releases/tag/curve25519-4.1.2-risczero.0>
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", rev = "3dccc5b71b806f500e73829e2a5cbfe288cce2a0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
    "sov-modules-api/bench",
    "sov-state/bench",
    "sov-modules-stf-blueprint/bench",
    "sov-risc0-adapter/bench",
    "sov-metrics/risc0",
]
bincode = ["sov-risc0-adapter/bincode"]